--- a/app/views/event/events/index.html.erb
+++ b/app/views/event/events/index.html.erb
@@ -2,7 +2,7 @@
   <li class="active">
     <a class="url" href="<%= event_events_path %>"><i class="fa fa-tags"></i> Eventos</a></li>
   <% if user_signed_in? %>
-      <%= link_to 'Novo Evento', new_event_event_path,:class=> "url", style:"float:right"%>
+      <%= link_to '<i class="fa fa-plus"></i>Novo Evento'.html_safe, new_event_event_path,:class=> "url", style:"float:right"%>
   <% end %>
 </ol>
 
