--- a/app/assets/stylesheets/ads.css
+++ b/app/assets/stylesheets/ads.css
@@ -145,3 +145,7 @@ border-radius: 4px 4px 0 0;
 	font-size: 16px;
 }
 
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+	color: white !important;
+}
+
