--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,9 +2,11 @@
   <div class="row" style="margin-right:0px;">
     <div class="col-lg-12">
       <div class="col-md-8">
-        <a href="#">Termos e Condições</a> |
-        <a href="#">Privacidade</a>|
-        <a href="#">Contactos</a>
+        <ul id='footer-info'>
+          <li><a href="#">Termos e Condições</a></li>
+          <li><a href="#">Privacidade</a></li>
+          <li><a href="#">Contactos</a></li>
+        </ul>
       </div>
       <div class="col-md-4">
         <p class="muted pull-right" style="color:white">© <%= Time.now.year %> AGROSOCIAL. Todos os direitos reservados.</p>
