[Update] city scaffold reimplemented

--- a/app/views/admin/cities/_form.html.erb
+++ b/app/views/admin/cities/_form.html.erb
@@ -16,10 +16,11 @@
     <%= f.text_field :city %>
   </div>
   <div class="field">
-    <%= f.label :country_id %><br>
-      <%= f.collection_select(:country_id,@country,:id,:name, :include_blank => 'Escolha uma opção') %>
+    <%= f.label :district_id %><br>
+      <%= f.collection_select(:district_id,@district,:id,:name, :include_blank => 'Escolha uma opção') %>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
