--- a/app/views/admin/cities/edit.html.erb
+++ b/app/views/admin/cities/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing city</h1>
+<h1>Editing admin_city</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', admin_cities_path(@city) %> |
+<%= link_to 'Show', @admin_city %> |
 <%= link_to 'Back', admin_cities_path %>
