--- a/app/views/admin/cities/index.html.erb
+++ b/app/views/admin/cities/index.html.erb
@@ -1,4 +1,3 @@
-
 <section class="panel">
 
   <header class="panel-heading"><h1>Lista de cidades</h1><h5><%= @cities.count %> Cidades</h5> 
@@ -23,7 +22,9 @@
       </thead>
 
       <tbody>
-        <% @citiesAZ.each do |city| %>
+        <%# @citiesAZ.each do |city| %>
+        <% @cities.each do |city| %>
+
         <tr>
           <td><%= city.city %></td>
           <td><%= city.ads.count %></td>
@@ -32,7 +33,6 @@
 
           <td></td>
 
-          <!--td><%#city.country_id %></td-->
           <td><%# link_to 'Ver', [:admin,city] %></td>
           <td><%= link_to 'Editar', edit_admin_city_path(city) %></td>
           <td><%= link_to 'Eliminar', [:admin,city], method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
