--- a/app/views/admin/cities/show.html.erb
+++ b/app/views/admin/cities/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>País:</strong>
-  <%= @city.country_id %>
+  <strong>Distrito:</strong>
+  <%= @city.district_id %>
 </p>
 
 <%= link_to 'Editar', edit_admin_city_path(@city) %> |
