--- a/app/views/cities/_form.html.erb
+++ b/app/views/cities/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :city %>
   </div>
   <div class="field">
-    <%= f.label :country_id %><br>
-      <%= f.collection_select(:country_id,@country,:id,:name, :include_blank => 'Escolha uma opção') %>
+    <%= f.label :district_id %><br>
+    <%= f.number_field :district_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
