--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Country:</strong>
-  <%= @city.country_id %>
+  <strong>District:</strong>
+  <%= @city.district_id %>
 </p>
 
 <%= link_to 'Edit', edit_city_path(@city) %> |
