--- a/app/views/admin/publicities/_form.html.erb
+++ b/app/views/admin/publicities/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.text_field :description %>
   </div>
   <div class="field">
+    <%= f.label :link %><br>
+    <%= f.text_field :link %>
+  </div>
+  <div class="field">
     <%= f.label :expire_date %><br>
   </div>
   <div class="field">
