--- a/app/views/admin/publicities/show.html.erb
+++ b/app/views/admin/publicities/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Link:</strong>
+  <%= @admin_publicity.link %>
+</p>
+
+<p>
   <strong>Expire date:</strong>
   <%= @admin_publicity.expire_date %>
 </p>
