--- a/app/views/academy/workshop_registrations/new.html.erb
+++ b/app/views/academy/workshop_registrations/new.html.erb
@@ -1,4 +1,8 @@
-<h1>New academy_workshop_registration</h1>
+<div class="workshop_inscription_title">
+
+       <p> Novo Registo </p>
+
+</div> 
 
 <%= render 'form' %>
 
