--- a/app/views/academy/workshop_registrations/_inscriptions.html.erb
+++ b/app/views/academy/workshop_registrations/_inscriptions.html.erb
@@ -1,11 +1,17 @@
-<h1>Listing academy_workshop_registrations</h1>
 
-<table>
+<div class="workshop_inscription_title">
+
+       <p> Lista de Registo do Workshop </p>
+
+</div> 
+
+
+<table class="table table-hover">
   <thead>
-    <tr>
+    <tr class="workshop_table_head">
       <th>Workshop</th>
-      <th>User</th>
-      <th>Is deleted</th>
+      <th>Utilizador</th>
+      <th>Registo em:</th>
       <th></th>
       <th></th>
       <th></th>
@@ -24,8 +30,12 @@
       </tr>
     <% end %>
   </tbody>
+
 </table>
 
 <br>
 
-<%= link_to 'New Workshop registration', new_academy_workshop_registration_path %>
+<div class="">
+
+  <p> <i class="fa fa-plus"></i><%= link_to 'Regista te agora no Worskhop', new_academy_workshop_registration_path %> </p>
+</div>
