--- a/app/views/academy/workshops/_form.html.erb
+++ b/app/views/academy/workshops/_form.html.erb
@@ -2,9 +2,23 @@
 
     <div class="row" style="margin-left: -10px; margin-right: -10px">
 
+
+
+      <div class="col-lg-12">
+          <div class="control-group">
+              <%= f.label :title, "Título",:class=>"control-label" %><label class="help-inline" style="" generated="true" for="academy_workshop_title"></label>
+            <div class="controls">
+              <%= f.text_field :title,:placeholder => "Defina o título do tutorial" ,:class=>"form-control",:rel=>"tooltip",:title=>"Escolha um titulo apropriado.
+             Seja claro e sucinto." %>
+            </div>
+            
+          </div>
+     </div>
+
+
       <div class="col-md-2">
         <div class="control-group">
-          <%= f.label :available_slots, "Vagas Disponíveis",:class=>"control-label" %><label class="help-inline" style="margin-left:10px" generated="true" for="academy_workshop_available_slots"></label>
+          <%= f.label :available_slots, "Vagas Disponíveis",:class=>"control-label" %><label class="help-inline"  generated="true" for="academy_workshop_available_slots"></label>
           <div class="controls">
             <%= f.number_field :available_slots,:class=>"form-control",:rel=>"tooltip",:title=>"Número máximo de inscrições para o workshop." %>
           </div>
@@ -45,7 +59,7 @@
     <div class="control-group">
       <%= f.label :description, "Descrição" ,:class=>"control-label" %><label class="help-inline" style="margin-left:10px" generated="true" for="academy_workshop_description"></label>
       <div class="controls">
-        <%= f.text_area :description,:placeholder => "Descreva o workshop...",:class=>"form-control", :rel=>"tooltip",:title=>"Escreva de forma clara e não utilize demasiada pontuação ou termos repetidos." %>
+        <%= f.text_area :description,:placeholder => "Descreva o workshop...",:class=>"form-control",:id => "some-textarea",:rows => "5", :rel=>"tooltip",:title=>"Escreva de forma clara e não utilize demasiada pontuação ou termos repetidos." %>
       </div>
     </div>
 
