--- a/app/views/admin/cities/index.html.erb
+++ b/app/views/admin/cities/index.html.erb
@@ -29,7 +29,7 @@
           <td><%= city.city %></td>
           <td><%= city.ads.count %></td>
           <td><%= city.users.count %></td>
-          <td><%# city.events.count %></td>
+          <td><%= city.events.count %></td>
 
           <td></td>
 
