--- a/app/views/event/events/_form.html.erb
+++ b/app/views/event/events/_form.html.erb
@@ -10,7 +10,7 @@
 
     <div class="row" style="margin-left: -10px; margin-right: -10px">
 
-      <div class="col-md-6">
+      <div class="col-md-4">
         <div class="control-group">
           <%= f.label :start_day, "Data de Início",:class=>"control-label" %><label style="margin-left:10px" for="event_event_start_day" generated="true" class="help-inline"></label>
           <div class="controls">
@@ -19,11 +19,20 @@
         </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-4">
         <div class="control-group">
           <%= f.label :end_day, "Data de Fim",:class=>"control-label" %><label style="margin-left:10px" for="event_event_end_day" generated="true" class="help-inline"></label>
           <div class="controls">
             <%= f.text_field :end_day, :placeholder=>"dd/mm/yyyy", :class=> "datepicker form-control" %>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="control-group">
+          <%= f.label :city_id, "Cidade" %><label class="help-inline" style="margin-left:10px" generated="true" for="event_event_city_id"></label>
+          <div class="controls">
+            <%= f.collection_select(:city_id,@cities,:id,:city,:class=>"form-control", :include_blank => 'Selecione...') %>
           </div>
         </div>
       </div>
