--- a/app/views/academy/tutorials/index.html.erb
+++ b/app/views/academy/tutorials/index.html.erb
@@ -16,61 +16,42 @@
   <% end %>
 </ol>
 
-
 <div class="row">
-
-
  <div class="panel">
+  
   <%= will_paginate(@academy_tutorials, renderer: BootstrapPagination::Rails, :previous_label => 'Anterior', :next_label => 'Seguinte') %>
 
   <table class="table table-hover">
-   <thead>
-    <tr class="tutorial_table_head">
-      <th class="tutorial_text_head">Titulo</th>
-      <th class="tutorial_text_head">Descricao</th>
-      <th class="tutorial_text_head">Categoria</th>
-      <th class="tutorial_text_head">Criado em:</th>
-      <th class="tutorial_text_head">Utilizador</th>
-      <th class="tutorial_text_head">Opcões</th>
+   <thead class="tutorial_table_head">
+    <tr>
+      <th width="50%" class="tutorial_text_head">TÍTULO</th>
+      <th width="20%" class="tutorial_text_head">UTILIZADOR</th>
+      <th width="14%" class="tutorial_text_head">CATEGORIA</th>
+      <th width="16%" class="tutorial_text_head">DATA DE CRIAÇÃO</th>
     </tr>
   </thead>
 
   <% @academy_tutorials.each do |academy_tutorial| %>
 
-
-
   <tbody>
 
-
     <tr class="tutorial_table_body">
-     <td>
-       <h3 class="title_tutorial"><%= academy_tutorial.title %></h3>
-     </td>
-     <td>
-       <h4><%= academy_tutorial.rapid_description %></h4>
-     </td>
-     <td>
-      <span class="label" style="background-color: #<%= academy_tutorial.category.color %>">
-       <%= academy_tutorial.category.name %>
-     </span>
-   </td>
-   <td>
-     <h4><%= academy_tutorial.created_at.strftime("%F") %></h4>
-   </td>
-   <td>
-    <span><%= image_tag current_user.avatar.url(:medium), style:"height:35px; " %></span>
-    <p> <%= academy_tutorial.user.name %> </p>
-  </td>
-
-  <td>
-   <% if current_user.id == academy_tutorial.user_id %>
-   <%= link_to 'Editar', edit_academy_tutorial_path(academy_tutorial),:class => "label",:style => "background-color:#FFCC91" %>
-   <% end %>
-   <%= link_to 'Ver', academy_tutorial,:class => "label",:style => "background-color:#FFCC91" %>
- </td>
-
-</tr>
-</tbody>
+      <td class="title-font" id="text-link">
+        <%= link_to academy_tutorial.title, academy_tutorial %>
+      </td>
+      <td>
+        <p class="title-font"> <%= academy_tutorial.user.name %> </p>
+      </td>
+      <td>
+        <span class="label" style="background-color: #<%= academy_tutorial.category.color %>">
+          <%= academy_tutorial.category.name %>
+        </span>
+      </td>
+      <td class="title-font">
+        <%= academy_tutorial.created_at.strftime("%F") %>
+      </td>
+    </tr>
+  </tbody>
 
 <% end %>
 
