--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,4 +1,16 @@
+body {
+  background-color: #fff;
+  color: #333;
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+}
 
+p, ol, ul, td {
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+}
 
 pre {
   background-color: #eee;
@@ -13,6 +25,7 @@ a {
   }
   &:hover {
     color: #fff;
+    background-color: #000;
   }
 }
 
@@ -28,30 +41,29 @@ div {
 
 .field_with_errors {
   padding: 2px;
-  width: 100%;
+  background-color: red;
   display: table;
 }
 
-
 #error_explanation {
-  text-align: left;
-  padding: 15px;
-  margin-top: 20px;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  color: #b94a48;
-  background-color: #f2dede;
-  border-color: #eed3d7;
-  font-weight: bold;
-}
-
-#error_explanation h2 {
-  margin-top: 0;
-  color: inherit;
-  font-size: 14px;
-}
-
-#error_explanation ul li {
-  font-size: 12px;
-  list-style: square;
+  width: 450px;
+  border: 2px solid red;
+  padding: 7px;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+  h2 {
+    text-align: left;
+    font-weight: bold;
+    padding: 5px 5px 5px 15px;
+    font-size: 12px;
+    margin: -7px;
+    margin-bottom: 0px;
+    background-color: #c00;
+    color: #fff;
+  }
+  ul li {
+    font-size: 12px;
+    list-style: square;
+  }
 }
