--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -9,6 +9,29 @@
   </ol>
 </div>
 
+
+<!-- IF IS got one slot left for ads 
+<div class="container">
+    <div class="row">
+        <div class="col-sm-14 col-md-14">
+            <div class="alert alert-info">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
+                    ×</button>
+                <span class="fa  fa-exclamation-circle"></span> <strong>Warning Message</strong>
+                <hr class="message-inner-separator">
+                <p>
+                    Best check yo self, you're not looking too good.</p>
+            </div>
+        </div>
+    </div>
+</div>-->
+
+<% if @num_slots_ads <= 1 %>
+  <script> 
+    showNotify("Apenas possui um anuncio restante!!Quer ter mais anuncios?Clique aqui!","info")  
+  </script>
+<% end %>
+
 <div class="panel">
     <div class="panel-heading border-header">
             <h3 class="panel-title">Novo Anúncio</h3>
