--- a/app/views/layouts/_header_academy_notification.html.erb
+++ b/app/views/layouts/_header_academy_notification.html.erb
@@ -49,7 +49,7 @@
       <% @notification_acmy_aproved.each do |notification| %>
         <% notyfication_type = notification.type_notification %>
         <li class="preview">
-          <%= link_to notyfication_type.title ,notyfication_type %>
+          <%= check_type_notification( notification ) %>
         </li>
       <% end %>
       <li class="divider"></li>
