Name error fix - Plam to Plan

--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -2,28 +2,28 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @plam.name %>
+  <%= @plan.name %>
 </p>
 
 <p>
   <strong>Duration:</strong>
-  <%= @plam.duration %>
+  <%= @plan.duration %>
 </p>
 
 <p>
   <strong>Price:</strong>
-  <%= @plam.price %>
+  <%= @plan.price %>
 </p>
 
 <p>
   <strong>Ads limit:</strong>
-  <%= @plam.ads_limit %>
+  <%= @plan.ads_limit %>
 </p>
 
 <p>
   <strong>Event limit:</strong>
-  <%= @plam.event_limit %>
+  <%= @plan.event_limit %>
 </p>
 
-<%= link_to 'Edit', edit_plam_path(@plam) %> |
-<%= link_to 'Back', plams_path %>
+<%= link_to 'Edit', edit_plan_path(@plan) %> |
+<%= link_to 'Back', plans_path %>
