--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@plam) do |f| %>
-  <% if @plam.errors.any? %>
+<%= form_for(@plan) do |f| %>
+  <% if @plan.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@plam.errors.count, "error") %> prohibited this plam from being saved:</h2>
+      <h2><%= pluralize(@plan.errors.count, "error") %> prohibited this plan from being saved:</h2>
 
       <ul>
-      <% @plam.errors.full_messages.each do |msg| %>
+      <% @plan.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
