--- a/app/views/admin/academy/tutorials/index.html.erb
+++ b/app/views/admin/academy/tutorials/index.html.erb
@@ -3,7 +3,7 @@
   <header class="panel-heading"><h1>Tutoriais por aprovar</h1><h5><%= @unaproved_tutorials.count %> Tutoriais</h5> 
   </header>
 <div class="table-responsive">
-  <table class="table table-hover" >
+  <table class="table table-hover tablesorter" id="orderTable" >
   <thead>
 	<tr>
 		<th>ID</th>
@@ -40,7 +40,7 @@
   <header class="panel-heading"><h1>Tutoriais aprovados</h1><h5><%= @aproved_tutorials.count %> Tutoriais</h5> 
   </header>
 <div class="table-responsive">
-  <table class="table table-hover" >
+  <table class="table table-hover tablesorter" id="orderTable" >
     <thead>
 
 	<tr>
