--- a/app/views/admin/ads/index.html.erb
+++ b/app/views/admin/ads/index.html.erb
@@ -5,7 +5,7 @@
     </div>
   </header>
   <div class="table-responsive">
-    <table class="table table-hover" >
+  <table class="table table-hover tablesorter" id="orderTable" >
       <thead>
         <tr>
           <th></th>
