--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -5,9 +5,8 @@
   </div>
   </header>
 
-
 <div class="table-responsive">
-  <table class="table table-hover" >
+  <table class="table table-hover tablesorter" id="orderTable" >
       <thead>
         <tr>
           <th>ID</th>
