--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -187,7 +187,7 @@
               </div>
               <div class="panel-body">
                 <div class="table-responsive">
-                  <table class="table table-bordered table-hover table-striped tablesorter">
+                  <table class="table table-bordered table-hover table-striped tablesorter" id="orderTable">
                     <thead>
                       <tr>
                         <th>Anúncio #<i class="fa fa-sort"></i></th>
@@ -306,7 +306,7 @@
               </div>
               <div class="panel-body">
                 <div class="table-responsive">
-                  <table class="table table-bordered table-hover table-striped tablesorter">
+                  <table class="table table-bordered table-hover table-striped tablesorter" id="orderTable">
                     <thead>
                       <tr>
                         <th>Anúncio # <i class="fa fa-sort"></i></th>
