--- a/app/views/admin/event/events/index.html.erb
+++ b/app/views/admin/event/events/index.html.erb
@@ -7,7 +7,7 @@
 
   </header>
 <div class="table-responsive">
-  <table class="table table-hover" >
+  <table class="table table-hover tablesorter" id="orderTable" >
   <thead>
     <tr>
       <th>ID</th>
@@ -54,7 +54,7 @@
 
   </header>
 <div class="table-responsive">
-  <table class="table table-hover" >
+  <table class="table table-hover tablesorter" id="orderTable" >
   <thead>
     <tr>
       <th>ID</th>
