--- a/app/views/admin/publicities/index.html.erb
+++ b/app/views/admin/publicities/index.html.erb
@@ -7,7 +7,7 @@
 
 
   <div class="table-responsive">
-    <table class="table table-hover" >
+  <table class="table table-hover tablesorter" id="orderTable" >
   <thead>
     <tr>
       <th>ID</th>
