--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -5,7 +5,7 @@
   </div>
   </header>
 <div class="table-responsive">
-  <table class="table table-hover" >
+  <table class="table table-hover tablesorter" id="orderTable" >
       <thead>
     <tr>
       <th>ID</th>
@@ -32,7 +32,7 @@
         <td><%= user.city.city %></td>
         <td><%= user.ads.count %></td>
         <td><%# user.events.count %></td>
-        <% if user.user_type==2 then 'Admin' else 'User' end%>
+        <td><%= if user.user_type==2 then 'Admin' else 'User' end%></td>
         <td><%= link_to 'Ver', admin_user_path(user) %></td>
         <!--td><%# link_to 'Editar', edit_admin_user_path(user) %></td-->
         <td><%= link_to 'Eliminar', admin_user_path(user), method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
