[Feature] Plans in AdminZone

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -52,8 +52,13 @@
          </li>
 
           <li> 
+           <%= link_to "<i class='fa fa-suitcase'></i> Pacotes".html_safe  , admin_plans_path %>
+         </li>
+
+          <li> 
            <%= link_to "<i class='fa fa-question-circle'></i> Perguntas".html_safe  , admin_academy_questions_path %>
          </li>
+
 
          <li> 
            <%= link_to "<i class='fa fa-qrcode'></i> Publicidade".html_safe  , admin_publicities_path %>
