[Update Feature] Welcome page: plans

--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -1,3 +1,9 @@
+<ol class="breadcrumb" id="breadcrumbAds">
+  <li class="active">
+    <a class="url" href="<%= plans_path %>"><i class="fa fa-tags"></i> Planos</a>
+  </li>
+</ol>
+
 <h1>Listing plans</h1>
 
 <table>
