--- a/app/views/layouts/_sidebar_right_featured.html.erb
+++ b/app/views/layouts/_sidebar_right_featured.html.erb
@@ -1,60 +1,19 @@
-<!--<div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
-
-  <section class="panel">
-    <div class="panel-body">
-      <div>
-        <div class="newest-classifieds">
-          <div class="media">
-            <a class="pull-left" href="#">
-              <img class="media-object" style="width: 64px; height: 64px;" src="http://placehold.it/64x64/e0e0e0">
-            </a>
-            <div class="media-body">
-              <p><a href="#"><strong>Destaque</strong></a></p>
-              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel ...</p>
-            </div>
-          </div>
-          <div class="media">
-            <a class="pull-left" href="#">
-              <img class="media-object" style="width: 64px; height: 64px;" src="http://placehold.it/64x64/e0e0e0">
-            </a>
-            <div class="media-body">
-              <p><a href="#"><strong>Destaque</strong></a></p>
-              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel ...</p>
-            </div>
-          </div>
-          <div class="media">
-            <a class="pull-left" href="#">
-              <img class="media-object" style="width: 64px; height: 64px;" src="http://placehold.it/64x64/e0e0e0">
-            </a>
-            <div class="media-body">
-              <p><a href="#"><strong>Destaque</strong></a></p>
-              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel ...</p>
-            </div>
-          </div>
-          <p class="text-right show-more"><a href="#">Mais...</a></p>
-        </div>
-      </div>
-    </div>
-  </section>
-</div>-->
-
 <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
     <section class="panel">
         <div class="panel-body">
             <div>
                 <article class="media">
                   <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
-                    <a href="#" class=" p-head">Pacotes disponiveis</a>
+                    <a href="#" class="url p-head"><span class="label label-danger">Planos disponíveis</span></a>
                   </div>
-                  <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
-                      <a class="pull-left thumb p-thumb"><img src="/assets/50x50.gif"></a>
-                      <a class="pull-left thumb p-thumb"><img src="/assets/50x50.gif"></a>
-                      <a class="pull-left thumb p-thumb"><img src="/assets/50x50.gif"></a>
-                      <a class="pull-left thumb p-thumb"><img src="/assets/50x50.gif"></a>
+                  <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6" style="margin-top:10px">
+                      <a class="pull-left thumb p-thumb" title="Horta" style="margin-left:5px"><img src="/assets/50x50.gif"></a>
+                      <a class="pull-left thumb p-thumb" title="Quinta" style="margin-left:5px"><img src="/assets/50x50.gif"></a>
+                      <a class="pull-left thumb p-thumb" title="Herdade" style="margin-left:5px"><img src="/assets/50x50.gif"></a>
                   </div>
                   <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
                     <div class="media-body">
-                      <p>click aqui para ver mais informação</p>
+                      <h6> <%= link_to "Mais informações...", plans_path, class:"h6 url" %></h6>
                     </div>
                   </div>
                 </article>
