--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -62,7 +62,7 @@
         <div class="control-group">
           <%= f.label :birthday, "Data de Nascimento",:class=>"control-label" %><label style="float: right" for="user_birthday" generated="true" class="help-inline"></label>
           <div class="controls">
-            <%= f.text_field :birthday, :placeholder=>"dd/mm/yyyy", :class=> "datepicker form-control" %>
+            <%= f.text_field :birthday, :value => (I18n.localize(@user.birthday) if (@user && @user.birthday)), :placeholder=>"dd/mm/yyyy", :class=> "datepicker form-control" %>
           </div>
         </div>
 
